--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -269,7 +269,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60aa093e" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa0f0d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -381,7 +381,7 @@ class: action
    - click on the links to see an individual page for 
        - states, constituencies, members, and documents
 
-<div class="countdown" id="timer_60aa072f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa0f40" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -473,8 +473,7 @@ Install the packages that we need
 
 
 ```r
-install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
-                   "tidyverse", "tidytext"))
+install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 ```
 
 
@@ -484,7 +483,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
 
 ]
 
-<div class="countdown" id="timer_60aa0621" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa0e29" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -497,8 +496,7 @@ Install the packages that we need
 
 
 ```r
-install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
-                   "tidyverse", "tidytext"))
+install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 ```
 
 &lt;br&gt;
@@ -516,27 +514,8 @@ We will use
 --
 - `polite` ([Perepolkin, 2019](https://cran.r-project.org/web/packages/polite/index.html)), for compliance with permissions to scrape websites
 
----
-class: action
-
-## R Packages &amp;mdash; Install from within RStudio
-
-
-```r
-install.packages(c("rvest", "RSelenium", "robotstxt", "polite",
-                   "tidyverse", "tidytext"))
-```
-
-- `tidyverse` ([Wickham &amp; RStudio 2019](https://cran.r-project.org/web/packages/tidyverse/index.html)), for various tasks
-
-    - including data manipulation, visualisation
-    - alternative: e.g., `base` R
-
 --
-&lt;br&gt;
-
-- `tidytext` ([Robinson &amp; Silge, 2021](https://cran.r-project.org/web/packages/tidytext/index.html)), for working with text as data
-
+- `dplyr` ([Wickham et al, 2021](https://cran.r-project.org/web/packages/dplyr/index.html)), for data manipulation
 
 ---
 class: action
@@ -569,8 +548,7 @@ library(rvest)
 library(RSelenium)
 library(robotstxt)
 library(polite)
-library(tidyverse)
-library(tidytext)
+library(dplyr)
 ```
 
 ]
@@ -993,8 +971,8 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##     spiderbar::can_fetch(obj = self$robexclobj, path = paths, 
 ##         user_agent = bot)
 ## }
-## &lt;bytecode: 0x000001463d6bc658&gt;
-## &lt;environment: 0x0000014644b1a518&gt;
+## &lt;bytecode: 0x000001aac75e6a58&gt;
+## &lt;environment: 0x000001aac3087128&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1085,7 +1063,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60aa086b" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa0f55" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1208,7 +1186,7 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_60aa081f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa0f29" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -2079,12 +2057,27 @@ read_html("https://luzpar.netlify.app/")
 ---
 ## Static Pages &amp;mdash; `rvest` &amp;mdash; Get Source Code
 
-The difference occurs when there is protocol against 
+The difference occurs when there is a protocol against 
 
 ```md
-bow(url = "https://luzpar.netlify.app`/states/`",
-    user_agent = `"googlebot"`) %&gt;%  
-    scrape()
+bow(url = "https://luzpar.netlify.app`/states/`", user_agent = `"googlebot"`)
+```
+
+
+```
+## &lt;polite session&gt; https://luzpar.netlify.app/states/
+##     User-agent: googlebot
+##     robots.txt: 2 rules are defined for 2 bots
+##    Crawl delay: 5 sec
+##   The path is not scrapable for this user-agent
+```
+
+&lt;br&gt;
+
+
+```md
+bow(url = "https://luzpar.netlify.app/states/", user_agent = "googlebot") `%&gt;%` 
+    `scrape()`
 ```
 
 
@@ -3301,6 +3294,13 @@ Note that
    - to turn XML into HTML
 
 ---
+class: center, middle
+
+## Interacting with Elements
+
+---
+
+
 
 ---
 name: reference-slide
@@ -3323,22 +3323,9 @@ Meissner, P., &amp; Ren, K. (2020). [robotstxt: A 'robots.txt' Parser and 'Webbo
 
 Perepolkin, D. (2019). [polite: Be Nice on the Web](https://cran.r-project.org/web/packages/polite/index.html). R package, version 0.1.1.
 
-Robinson, D., &amp; Silge, J. (2021). [tidytext: Text mining using 'dplyr', 'ggplot2', and other tidy tools](https://cran.r-project.org/web/packages/tidytext/index.html). R package, version 0.3.0.
-
-Silge, J., &amp; Robinson, D. (2017). [Text mining with R: A tidy approach](https://www.tidytextmining.com). O'Reilly. Open access at
-
-Wickham, H. (2019). [stringr: Simple, Consistent Wrappers for Common String Operations](https://cran.r-project.org/web/packages/stringr/index.html). R package, version 1.4.0.
-
 Wickham, H. (2021). [rvest: Easily Harvest (Scrape) Web Pages](https://cran.r-project.org/web/packages/rvest/index.html). R package, version 1.0.0.
 
-
-
-
-Wickham, H., Chang, W., Henry, L., Pedersen, T. L., Takahashi, K., Wilke, C., Woo, K., Yutani, H. and Dunnington, D. (2020). [dplyr: A grammar of data manipulation](https://cran.r-project.org/web/packages/dplyr/index.html). R package, version 0.8.5.
-
-Wickham, H. and Grolemund, G. (2019). [R for data science](https://r4ds.had.co.nz). O'Reilly. Open access at [https://r4ds.had.co.nz](https://r4ds.had.co.nz/).
-
-Wickham, H., RStudio (2019). [https://cran.r-project.org/web/packages/tidyverse/index.html](tidyverse: Easily Install and Load the 'Tidyverse'). R package, version 3.3.3.
+Wickham, H., François, R., Henry, L., &amp; Müller, K. (2021). [dplyr: A grammar of data manipulation](https://cran.r-project.org/web/packages/dplyr/index.html). R package, version 1.0.6.
 
 Xie, Y. (2020). [xaringan: Presentation Ninja](https://cran.r-project.org/web/packages/xaringan/index.html). R package, version 0.19.
 
