workshop completely drafted

--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -269,7 +269,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60aa4aef" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa5978" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -381,7 +381,7 @@ class: action
    - click on the links to see an individual page for 
        - states, constituencies, members, and documents
 
-<div class="countdown" id="timer_60aa4c4f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa586b" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -483,7 +483,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 
 ]
 
-<div class="countdown" id="timer_60aa4d46" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa5750" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -971,8 +971,8 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##     spiderbar::can_fetch(obj = self$robexclobj, path = paths, 
 ##         user_agent = bot)
 ## }
-## &lt;bytecode: 0x000001f230fd3f88&gt;
-## &lt;environment: 0x000001f234f6ea48&gt;
+## &lt;bytecode: 0x000001483d1d8cb0&gt;
+## &lt;environment: 0x000001483f3fd508&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1063,7 +1063,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60aa4c37" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa57d8" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1186,7 +1186,7 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_60aa4b6f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60aa5740" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1813,8 +1813,8 @@ read_html("https://luzpar.netlify.app/")
 ```
 ## {html_document}
 ## &lt;html lang="en-us"&gt;
-## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n ...
-## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt; ...
+## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n&lt;meta name="vi ...
+## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt;script src="/j ...
 ```
 
 ---
@@ -1838,8 +1838,8 @@ read_html("https://luzpar.netlify.app/")
 ```
 ## {html_document}
 ## &lt;html lang="en-us"&gt;
-## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n ...
-## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt; ...
+## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n&lt;meta name="vi ...
+## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt;script src="/j ...
 ```
 
 ---
@@ -2038,8 +2038,8 @@ bow(url = "https://luzpar.netlify.app/") %&gt;%
 ```
 ## {html_document}
 ## &lt;html lang="en-us"&gt;
-## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n ...
-## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt; ...
+## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n&lt;meta name="vi ...
+## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt;script src="/j ...
 ```
 
 
@@ -2050,8 +2050,8 @@ read_html("https://luzpar.netlify.app/")
 ```
 ## {html_document}
 ## &lt;html lang="en-us"&gt;
-## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n ...
-## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt; ...
+## [1] &lt;head&gt;\n&lt;meta http-equiv="Content-Type" content="text/html; charset=UTF-8"&gt;\n&lt;meta charset="utf-8"&gt;\n&lt;meta name="vi ...
+## [2] &lt;body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" class="page-wrapper"&gt;\n&lt;script src="/j ...
 ```
 
 ---
@@ -2143,7 +2143,7 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 
 ```
 ## {xml_nodeset (24)}
-##  [1] &lt;a class="js-search" href="#" aria-label="Close"&gt;&lt;i class="fas fa-times-circle text-muted" aria-hidd ...
+##  [1] &lt;a class="js-search" href="#" aria-label="Close"&gt;&lt;i class="fas fa-times-circle text-muted" aria-hidden="true"&gt;&lt;/i&gt; ...
 ##  [2] &lt;a class="navbar-brand" href="/"&gt;Parliament of Luzland&lt;/a&gt;
 ##  [3] &lt;a class="navbar-brand" href="/"&gt;Parliament of Luzland&lt;/a&gt;
 ##  [4] &lt;a class="nav-link active" href="/"&gt;&lt;span&gt;Home&lt;/span&gt;&lt;/a&gt;
@@ -2151,15 +2151,15 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 ##  [6] &lt;a class="nav-link" href="/constituencies/"&gt;&lt;span&gt;Constituencies&lt;/span&gt;&lt;/a&gt;
 ##  [7] &lt;a class="nav-link" href="/members/"&gt;&lt;span&gt;Members&lt;/span&gt;&lt;/a&gt;
 ##  [8] &lt;a class="nav-link" href="/documents/"&gt;&lt;span&gt;Documents&lt;/span&gt;&lt;/a&gt;
-##  [9] &lt;a class="nav-link js-search" href="#" aria-label="Search"&gt;&lt;i class="fas fa-search" aria-hidden="tru ...
-## [10] &lt;a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-label="Display prefere ...
+##  [9] &lt;a class="nav-link js-search" href="#" aria-label="Search"&gt;&lt;i class="fas fa-search" aria-hidden="true"&gt;&lt;/i&gt;&lt;/a&gt;
+## [10] &lt;a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-label="Display preferences"&gt;&lt;i class ...
 ## [11] &lt;a href="#" class="dropdown-item js-set-theme-light"&gt;&lt;span&gt;Light&lt;/span&gt;&lt;/a&gt;
 ## [12] &lt;a href="#" class="dropdown-item js-set-theme-dark"&gt;&lt;span&gt;Dark&lt;/span&gt;&lt;/a&gt;
 ## [13] &lt;a href="#" class="dropdown-item js-set-theme-auto"&gt;&lt;span&gt;Automatic&lt;/span&gt;&lt;/a&gt;
-## [14] &lt;a href="https://github.com/resulumit/scrp_workshop" target="_blank" rel="noopener"&gt;a workshop on au ...
+## [14] &lt;a href="https://github.com/resulumit/scrp_workshop" target="_blank" rel="noopener"&gt;a workshop on automated web sc ...
 ## [15] &lt;a href="https://resulumit.com/" target="_blank" rel="noopener"&gt;Resul Umit&lt;/a&gt;
-## [16] &lt;a href="https://parliament-luzland.netlify.app/documents/" target="_blank" rel="noopener"&gt;documents ...
-## [17] &lt;a href="https://parliament-luzland.netlify.app/constituencies/" target="_blank" rel="noopener"&gt;cons ...
+## [16] &lt;a href="https://parliament-luzland.netlify.app/documents/" target="_blank" rel="noopener"&gt;documents&lt;/a&gt;
+## [17] &lt;a href="https://parliament-luzland.netlify.app/constituencies/" target="_blank" rel="noopener"&gt;constituencies&lt;/a&gt;
 ## [18] &lt;a href="https://parliament-luzland.netlify.app/members/" target="_blank" rel="noopener"&gt;members&lt;/a&gt;
 ## [19] &lt;a href="https://parliament-luzland.netlify.app/states/" target="_blank" rel="noopener"&gt;states&lt;/a&gt;
 ## [20] &lt;a href="https://github.com/rstudio/blogdown" target="_blank" rel="noopener"&gt;Blogdown&lt;/a&gt;
@@ -2182,10 +2182,10 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 
 ```
 ## {xml_nodeset (9)}
-## [1] &lt;a href="https://github.com/resulumit/scrp_workshop" target="_blank" rel="noopener"&gt;a workshop on aut ...
+## [1] &lt;a href="https://github.com/resulumit/scrp_workshop" target="_blank" rel="noopener"&gt;a workshop on automated web scr ...
 ## [2] &lt;a href="https://resulumit.com/" target="_blank" rel="noopener"&gt;Resul Umit&lt;/a&gt;
 ## [3] &lt;a href="https://parliament-luzland.netlify.app/documents/" target="_blank" rel="noopener"&gt;documents&lt;/a&gt;
-## [4] &lt;a href="https://parliament-luzland.netlify.app/constituencies/" target="_blank" rel="noopener"&gt;const ...
+## [4] &lt;a href="https://parliament-luzland.netlify.app/constituencies/" target="_blank" rel="noopener"&gt;constituencies&lt;/a&gt;
 ## [5] &lt;a href="https://parliament-luzland.netlify.app/members/" target="_blank" rel="noopener"&gt;members&lt;/a&gt;
 ## [6] &lt;a href="https://parliament-luzland.netlify.app/states/" target="_blank" rel="noopener"&gt;states&lt;/a&gt;
 ## [7] &lt;a href="https://github.com/rstudio/blogdown" target="_blank" rel="noopener"&gt;Blogdown&lt;/a&gt;
@@ -2240,11 +2240,9 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 
 
 ```
-## [1] "a workshop on automated web scraping" "Resul Umit"                          
-## [3] "documents"                            "constituencies"                      
-## [5] "members"                              "states"                              
-## [7] "Blogdown"                             "Hugo"                                
-## [9] "Wowchemy"
+## [1] "a workshop on automated web scraping" "Resul Umit"                           "documents"                           
+## [4] "constituencies"                       "members"                              "states"                              
+## [7] "Blogdown"                             "Hugo"                                 "Wowchemy"
 ```
 
 ---
@@ -2313,10 +2311,8 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 ##                                          "noopener" 
 ## 
 ## [[4]]
-##                                                     href 
-## "https://parliament-luzland.netlify.app/constituencies/" 
-##                                                   target 
-##                                                 "_blank" 
+##                                                     href                                                   target 
+## "https://parliament-luzland.netlify.app/constituencies/"                                                 "_blank" 
 ##                                                      rel 
 ##                                               "noopener" 
 ## 
@@ -2333,10 +2329,8 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 ##                                       "noopener" 
 ## 
 ## [[7]]
-##                                  href                                target 
-## "https://github.com/rstudio/blogdown"                              "_blank" 
-##                                   rel 
-##                            "noopener" 
+##                                  href                                target                                   rel 
+## "https://github.com/rstudio/blogdown"                              "_blank"                            "noopener" 
 ## 
 ## [[8]]
 ##                 href               target                  rel 
@@ -2360,14 +2354,10 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 
 
 ```
-## [1] "https://github.com/resulumit/scrp_workshop"            
-## [2] "https://resulumit.com/"                                
-## [3] "https://parliament-luzland.netlify.app/documents/"     
-## [4] "https://parliament-luzland.netlify.app/constituencies/"
-## [5] "https://parliament-luzland.netlify.app/members/"       
-## [6] "https://parliament-luzland.netlify.app/states/"        
-## [7] "https://github.com/rstudio/blogdown"                   
-## [8] "https://gohugo.io/"                                    
+## [1] "https://github.com/resulumit/scrp_workshop"             "https://resulumit.com/"                                
+## [3] "https://parliament-luzland.netlify.app/documents/"      "https://parliament-luzland.netlify.app/constituencies/"
+## [5] "https://parliament-luzland.netlify.app/members/"        "https://parliament-luzland.netlify.app/states/"        
+## [7] "https://github.com/rstudio/blogdown"                    "https://gohugo.io/"                                    
 ## [9] "https://github.com/wowchemy"
 ```
 
@@ -2394,14 +2384,10 @@ bow(url = "https://luzpar.netlify.app") %&gt;%
 
 
 ```
-## [1] "https://github.com/resulumit/scrp_workshop"            
-## [2] "https://resulumit.com/"                                
-## [3] "https://parliament-luzland.netlify.app/documents/"     
-## [4] "https://parliament-luzland.netlify.app/constituencies/"
-## [5] "https://parliament-luzland.netlify.app/members/"       
-## [6] "https://parliament-luzland.netlify.app/states/"        
-## [7] "https://github.com/rstudio/blogdown"                   
-## [8] "https://gohugo.io/"                                    
+## [1] "https://github.com/resulumit/scrp_workshop"             "https://resulumit.com/"                                
+## [3] "https://parliament-luzland.netlify.app/documents/"      "https://parliament-luzland.netlify.app/constituencies/"
+## [5] "https://parliament-luzland.netlify.app/members/"        "https://parliament-luzland.netlify.app/states/"        
+## [7] "https://github.com/rstudio/blogdown"                    "https://gohugo.io/"                                    
 ## [9] "https://github.com/wowchemy"
 ```
 
@@ -3568,16 +3554,14 @@ as_tibble(selKeys) %&gt;% names()
 ```
 
 ```
-##  [1] "null"         "cancel"       "help"         "backspace"    "tab"          "clear"       
-##  [7] "return"       "enter"        "shift"        "control"      "alt"          "pause"       
-## [13] "escape"       "space"        "page_up"      "page_down"    "end"          "home"        
-## [19] "left_arrow"   "up_arrow"     "right_arrow"  "down_arrow"   "insert"       "delete"      
-## [25] "semicolon"    "equals"       "numpad_0"     "numpad_1"     "numpad_2"     "numpad_3"    
-## [31] "numpad_4"     "numpad_5"     "numpad_6"     "numpad_7"     "numpad_8"     "numpad_9"    
-## [37] "multiply"     "add"          "separator"    "subtract"     "decimal"      "divide"      
-## [43] "f1"           "f2"           "f3"           "f4"           "f5"           "f6"          
-## [49] "f7"           "f8"           "f9"           "f10"          "f11"          "f12"         
-## [55] "command_meta"
+##  [1] "null"         "cancel"       "help"         "backspace"    "tab"          "clear"        "return"      
+##  [8] "enter"        "shift"        "control"      "alt"          "pause"        "escape"       "space"       
+## [15] "page_up"      "page_down"    "end"          "home"         "left_arrow"   "up_arrow"     "right_arrow" 
+## [22] "down_arrow"   "insert"       "delete"       "semicolon"    "equals"       "numpad_0"     "numpad_1"    
+## [29] "numpad_2"     "numpad_3"     "numpad_4"     "numpad_5"     "numpad_6"     "numpad_7"     "numpad_8"    
+## [36] "numpad_9"     "multiply"     "add"          "separator"    "subtract"     "decimal"      "divide"      
+## [43] "f1"           "f2"           "f3"           "f4"           "f5"           "f6"           "f7"          
+## [50] "f8"           "f9"           "f10"          "f11"          "f12"          "command_meta"
 ```
 
 ---
@@ -3723,7 +3707,7 @@ browser$`switchToFrame(Id = NULL)`
 **Plan:**
 
 - Interact with the page until it displays the desired list of documents
-- Get the page source and keep separate the links
+- Get the page source and separate the links
 - Write a for loop to
     - visit the related pages one by one
     - download the documents
@@ -3762,12 +3746,39 @@ drop_down$clickElement()
 ---
 ## Dynamic Pages &amp;mdash; Scraping &amp;mdash; Example
 
-Get the page source and keep separate the links
+Get the page source and separate the links
+
+
+```r
+the_links &lt;- browser$getPageSource()[[1]] %&gt;% 
+        read_html() %&gt;% 
+        html_elements("td a") %&gt;% 
+        html_attr("href")
+
+print(the_links)
+```
+
+.out-t[
+```
+## [1] "https://luzpar.netlify.app/documents/human-rights-2021/"            
+## [2] "https://luzpar.netlify.app/documents/greenhouse-gas-emissions-2021/"
+## [3] "https://luzpar.netlify.app/documents/tax-reform-2020/"              
+## [4] "https://luzpar.netlify.app/documents/parliamentary-staff-2020/"     
+## [5] "https://luzpar.netlify.app/documents/cyber-security-2019/"          
+## [6] "https://luzpar.netlify.app/documents/electronic-cigarettes-2019/" 
+
+```
+]
+
+---
+## Dynamic Pages &amp;mdash; Scraping &amp;mdash; Example
+
+- Write a for loop to download PDFs, if they exist
 
 ```
 
-```
 
+```
 
 
 ---
