--- a/presentation/scrp_workshop.html
+++ b/presentation/scrp_workshop.html
@@ -202,21 +202,21 @@ name: contents-slide
 [Part 2. Preliminary Considerations](#part2)
    - e.g., ethics of web scraping
 
-[Part 3. Webpage Source Code](#part3)
-   - e.g., elements and selectors
+[Part 3. HTML Basics](#part3)
+   - e.g., elements and attributes
 
 ]
 
 .pull-right[
    
+[Part 4. CSS Selectors](#part4)
+   - e.g., selecting an element   
 
-[Part 4. Scraping Static Pages](#part4)
+[Part 5. Scraping Static Pages](#part5)
    - e.g., getting text from an element
-   - by using `rvest`
   
-[Part 5. Scraping Dynamic Pages](#part5)
-   - e.g., clicking before scraping
-   - by using `RSelenium` and `rvest`
+[Part 6. Scraping Dynamic Pages](#part6)
+   - e.g., clicking to create an element
    
 ]
 
@@ -265,7 +265,7 @@ Slides with this background colour indicate that your action is required, for
     - these slides have countdown timers
         - as a guide, not to be followed strictly
     
-<div class="countdown" id="timer_60ac0ca7" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af81b3" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -379,7 +379,7 @@ class: action
    - notice that the documents section is different than the rest
        - it is a page with dynamic frame
 
-<div class="countdown" id="timer_60ac0e58" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af841d" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
    
@@ -480,7 +480,7 @@ install.packages(c("rvest", "RSelenium", "robotstxt", "polite", "dplyr"))
 
 ]
 
-<div class="countdown" id="timer_60ac0e12" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af823b" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -962,8 +962,8 @@ robotstxt(domain = "https://luzpar.netlify.app")
 ##     spiderbar::can_fetch(obj = self$robexclobj, path = paths, 
 ##         user_agent = bot)
 ## }
-## &lt;bytecode: 0x0000000028295d28&gt;
-## &lt;environment: 0x00000000282995c8&gt;
+## &lt;bytecode: 0x00000000281c3f58&gt;
+## &lt;environment: 0x00000000281c33c0&gt;
 ## 
 ## attr(,"class")
 ## [1] "robotstxt"
@@ -1054,7 +1054,7 @@ class: action
 
   - with the `robotstxt` function
 
-<div class="countdown" id="timer_60ac0dd7" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af81fc" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
@@ -1074,7 +1074,7 @@ class: action
   - waiting time may or may not be defined in the protocol
       - lookout for, and respect, the `Crawl-delay` key in `robots.txt`     
 &lt;br&gt;
-  - [Part 4](#part4) and [Part 5](#part5) covers how to wait
+  - [Part 5](#part5) and [Part 6](#part6) covers how to wait
   
 &lt;br&gt;
 
@@ -1110,7 +1110,7 @@ Scraped data frequently requires
 name: part3
 class: inverse, center, middle
 
-# Part 3. Webpage Source Code
+# Part 3. HTML Basics
 
 .footnote[
 
@@ -1119,7 +1119,7 @@ class: inverse, center, middle
 ]
 
 ---
-## Webpage Source Code &amp;mdash; Overview
+## HTML &amp;mdash; Overview
 
 - Webpages include more than what is immediately visible to visitors
 
@@ -1142,7 +1142,7 @@ class: inverse, center, middle
       - e.g., URLs hidden under text
            
 ---
-## Webpage Source Code &amp;mdash; View in Browser
+## HTML &amp;mdash; View in Browser
 
 The `Ctrl` `+` `U` shortcut is to display source code &amp;mdash; alternatively, right click and `View` `Page` `Source`
 
@@ -1151,7 +1151,7 @@ The `Ctrl` `+` `U` shortcut is to display source code &amp;mdash; alternatively,
 
 
 ---
-## Webpage Source Code &amp;mdash; View in Browser &amp;mdash; DOM
+## HTML &amp;mdash; View in Browser &amp;mdash; DOM
 
 Browsers also offer putting source codes in a structure
 - known as DOM (document object model), initiated by the `F12` key on Chrome
@@ -1176,12 +1176,12 @@ class: action
 &lt;br&gt;   
 - compare the look of the front- and back-end
 
-<div class="countdown" id="timer_60ac0f6d" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af83c3" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1221,7 +1221,7 @@ class: action
 ]
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1258,7 +1258,7 @@ HTML documents
 ]
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1297,7 +1297,7 @@ HTML documents
 ```
 ]
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; the Root
+## HTML &amp;mdash; HTML &amp;mdash; the Root
 
 .pull-left[
 
@@ -1334,7 +1334,7 @@ HTML documents
 ```
 ]
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; the Head
+## HTML &amp;mdash; HTML &amp;mdash; the Head
 
 .pull-left[
 
@@ -1370,7 +1370,7 @@ HTML documents
 ```
 ]
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Overview
+## HTML &amp;mdash; HTML &amp;mdash; Overview
 
 .pull-left[
 
@@ -1406,7 +1406,7 @@ HTML documents
 ]
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; HTML &amp;mdash; Syntax
 
 Most elements have opening and closing .yellow-h[tags]
 
@@ -1430,7 +1430,7 @@ Note that
 - the closing tag has a forward slash .yellow-h[/] before the element name
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; HTML &amp;mdash; Syntax
 
 Most elements have some content
 
@@ -1446,7 +1446,7 @@ This is a one sentence paragraph.
 ]
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; HTML &amp;mdash; Syntax
 
 Elements can be nested
 
@@ -1473,7 +1473,7 @@ Note that
 - paragraph is said to be the parent of the strong element
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; HTML &amp;mdash; Syntax
 
 Elements can have .yellow-h[attributes]
 
@@ -1499,7 +1499,7 @@ Note that
 
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Syntax
+## HTML &amp;mdash; HTML &amp;mdash; Syntax
 
 There could be more than one attribute in an element
 
@@ -1529,7 +1529,7 @@ Note that
    - while the `id` attribute must be unique on a page
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Important Elements &amp; Attibutes 
+## HTML &amp;mdash; HTML &amp;mdash; Important Elements &amp; Attibutes 
 
 Links are provided with the a (anchor) element
 
@@ -1550,7 +1550,7 @@ Note that
 - most attributes are optional, some are required
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Links 
+## HTML &amp;mdash; HTML &amp;mdash; Links 
 
 Links
 
@@ -1573,7 +1573,7 @@ Note that
 - it becomes visible when hovered over with mouse
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Lists
+## HTML &amp;mdash; HTML &amp;mdash; Lists
 
 The `&lt;ul&gt;` tag introduces un-ordered lists, while the `&lt;li&gt;` tag defines lists items
 
@@ -1604,7 +1604,7 @@ Note that
 - Ordered lists are introduced with the the `&lt;ol&gt;` tag instead
 
 ---
-## Webpage Source Code &amp;mdash; HTML &amp;mdash; Notes
+## HTML &amp;mdash; HTML &amp;mdash; Notes
 
 By default, multiple spaces and/or lines breaks are ignored by browsers
 
@@ -1659,12 +1659,24 @@ class: action
    - &lt;https://www.w3schools.com/&gt; is a great place to look at
    - save this document as we will continue working on it
 
-<div class="countdown" id="timer_60ac0e0a" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af82f9" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Overview
+name: part4
+class: inverse, center, middle
+
+# Part 3. CSS Selectors
+
+.footnote[
+
+[Back to the contents slide](#contents-slide).
+
+]
+
+---
+## CSS &amp;mdash; Overview
 
 - CSS stands for .yellow-h[cascading stylesheets]
 
@@ -1683,7 +1695,7 @@ class: action
    - externally, but then linked in the `head` element
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Syntax
+## CSS &amp;mdash; Syntax
 
 .pull-left[
 CSS is written in .yellow-h[rules]
@@ -1703,7 +1715,7 @@ CSS is written in .yellow-h[rules]
 ]
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Syntax
+## CSS &amp;mdash; Syntax
 
 .pull-left[
 - CSS is written in rules, with a syntax consisting of
@@ -1734,7 +1746,7 @@ CSS is written in .yellow-h[rules]
 
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Syntax
+## CSS &amp;mdash; Syntax
 
 .pull-left[
 - CSS is written in rules, with a syntax consisting of
@@ -1764,7 +1776,7 @@ CSS is written in .yellow-h[rules]
 
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Syntax
+## CSS &amp;mdash; Syntax
 
 .pull-left[
 - CSS is written in rules, with a syntax consisting of
@@ -1793,7 +1805,7 @@ CSS is written in .yellow-h[rules]
   - properties are followed by a colon
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Syntax
+## CSS &amp;mdash; Syntax
 
 .pull-left[
 - CSS is written in rules, with a syntax consisting of
@@ -1824,7 +1836,7 @@ CSS is written in .yellow-h[rules]
 ]
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Internal
+## CSS &amp;mdash; Internal
 
 .pull-left[
 
@@ -1862,7 +1874,7 @@ CSS is written in .yellow-h[rules]
 ]
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; External
+## CSS &amp;mdash; External
 
 .pull-left[
 
@@ -1902,7 +1914,7 @@ CSS is written in .yellow-h[rules]
 ]
 
 ---
-## Webpage Source Code &amp;mdash; CSS &amp;mdash; Inline
+## CSS &amp;mdash; Inline
 
 CSS rules can also be defined inline
 - with the `style` attribute
@@ -1931,15 +1943,15 @@ class: action
    - increasing the font size of the text in paragraph  
    - change the colour of the second item in the list to red
    
-<div class="countdown" id="timer_60ac0eca" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af8213" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-name: part4
+name: part5
 class: inverse, center, middle
 
-# Part 3. Scraping Static Pages
+# Part 5. Scraping Static Pages
 
 .footnote[
 
@@ -1978,7 +1990,7 @@ class: inverse, center, middle
 
   - created by [Hadley Wickham](http://http://hadley.nz/)
   - popular &amp;mdash; used by many for web scraping
-      - downloaded 613,597 times last month
+      - downloaded 634,224 times last month
       - some of it must be thanks to being a part of the `tidyverse` family     
 &lt;br&gt;      
   - last major revision was in March 2021
@@ -2710,7 +2722,7 @@ class: action
       - make these URLs absolute   
       - see what other attributes are there to collect     
 
-<div class="countdown" id="timer_60ac101b" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af8297" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3026,15 +3038,15 @@ Hints:
 -  practice with 3 members until you are ready to run the loop for all 
     - e.g., by replacing `1:length(the_links)` with `1:3` for the loop
 
-<div class="countdown" id="timer_60ac0cb9" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af81db" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">45</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
-name: part5
+name: part6
 class: inverse, center, middle
 
-# Part 5. Scraping Dynamic Pages
+# Part 6. Scraping Dynamic Pages
 
 .footnote[
 
@@ -3089,7 +3101,7 @@ Scraping dynamic pages involves three main tasks
 - A package that integrates [Selenium 2.0 WebDriver](https://www.selenium.dev/documentation/en/) into R
 
   - created by [John Harrison](http://johndharrison.github.io/#/cover)
-  - downloaded 4,808 times last month
+  - downloaded 4,983 times last month
   - last updated in February 2020
 
 --
@@ -3546,7 +3558,7 @@ class: action
 - e.g., take a screenshot of your browser
    - and view it in R
 
-<div class="countdown" id="timer_60ac0ffe" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af8334" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -3924,7 +3936,7 @@ class: action
 - to see all results
 
 
-<div class="countdown" id="timer_60ac105f" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af83a3" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -4102,7 +4114,7 @@ Hint
 - start with the related code in the previous slides, and adopt it to your needs  
 
 
-<div class="countdown" id="timer_60ac1003" style="top:0;right:0;" data-warnwhen="0">
+<div class="countdown" id="timer_60af8514" style="top:0;right:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">30</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
